# tesserae-photopainter-7.3-bin-client

./: .gitignore  README.md  platformio.ini
include/: secrets.example.h
src/: CMakeLists.txt  epd_driver.c  heartbeat.c  heartbeat.h  main.c  mqtt_handler.c  mqtt_handler.h  provisioning.c  splash.c  splash.h
tools/: gen_splash.py  release.sh
